# photosort

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
tests/: tests.rs
tests/data/: non_image_file.txt
